--- a/src/components/popup/popupDefault/popupDefault.module.scss
+++ b/src/components/popup/popupDefault/popupDefault.module.scss
@@ -37,8 +37,8 @@
         position: absolute;
         top: 3rem;
         right: 3rem;
-        width: 6rem;
-        height: 6rem;
+        width: 4.8rem;
+        height: 4.8rem;
         background: url("/assets/images/popup_close.png") no-repeat 50% 50% / cover;
       }
       .title {
@@ -48,11 +48,11 @@
         color: $color-black;
         text-align: center;
         font-family: gmarket;
-        font-size: 3.8rem;
+        font-size: 3.04rem;
         font-weight: 700;
-        line-height: 3.8rem;
+        line-height: 3.04rem;
         letter-spacing: -0.076rem;
-        height: 12rem;
+        height: 11rem;
       }
     }
   }
@@ -71,17 +71,18 @@
           height: 4rem;
         }
         .title {
-          font-size: 2.8rem;
-          line-height: 3.6rem;
+          font-size: 2.4rem;
+          font-weight: 700;
+          line-height: 2.4rem;
           letter-spacing: -0.076rem;
-          height: 10rem;
+          height: 9.4rem;
         }
       }
     }
   }
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 768px) {
   .popup-default {
     .popup-wrap {
       .box {
