--- a/src/components/main/mainSection1/mainSection1.module.scss
+++ b/src/components/main/mainSection1/mainSection1.module.scss
@@ -62,7 +62,7 @@
       margin-top: 6rem;
       .sub-title {
         color: $color-black;
-        font-family: gmarket;
+        font-family: GmarketSans;
         font-size: 2.8rem;
         font-weight: 500;
         line-height: 4rem;
@@ -71,7 +71,7 @@
       & > h2 {
         width: 100%;
         color: $color-black;
-        font-family: gmarket;
+        font-family: GmarketSans;
         font-size: 7.3rem;
         font-weight: 700;
         line-height: 9rem;
@@ -86,7 +86,7 @@
       }
       & > p {
         color: $color-black;
-        font-family: gmarket;
+        font-family: GmarketSans;
         font-size: 1.9rem;
         font-weight: 300;
         line-height: 3rem;
