--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,2 +1,2 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700&display=swap");
-@import url("https://websfont.github.io/gmarket/gmarket.css");
+@import url("https://webfontworld.github.io/gmarket/GmarketSans.css");
