feat: 폰트 복구, section1 폰트 크기 수정

--- a/src/components/main/mainSection1/mainSection1.module.scss
+++ b/src/components/main/mainSection1/mainSection1.module.scss
@@ -62,7 +62,7 @@
       margin-top: 6rem;
       .sub-title {
         color: $color-black;
-        font-family: GmarketSans;
+        font-family: gmarket;
         font-size: 2.8rem;
         font-weight: 500;
         line-height: 4rem;
@@ -71,10 +71,10 @@
       & > h2 {
         width: 100%;
         color: $color-black;
-        font-family: GmarketSans;
-        font-size: 7.3rem;
+        font-family: gmarket;
+        font-size: 7rem;
         font-weight: 700;
-        line-height: 9rem;
+        line-height: 8.4rem;
         letter-spacing: -0.146rem;
         margin-top: 1rem;
         word-break: keep-all;
@@ -86,7 +86,7 @@
       }
       & > p {
         color: $color-black;
-        font-family: GmarketSans;
+        font-family: gmarket;
         font-size: 1.9rem;
         font-weight: 300;
         line-height: 3rem;
