--- a/src/components/main/mainSection2/mainSection2.module.scss
+++ b/src/components/main/mainSection2/mainSection2.module.scss
@@ -70,7 +70,7 @@
   }
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 1280px) {
   .section2 {
     padding: 8rem 0;
     .section-wrap {
@@ -90,7 +90,7 @@
         padding: 2.8rem;
         border-radius: 2.8rem;
         border: 0.1rem solid $color-black;
-        max-width: 68rem;
+        max-width: none;
         .thumb {
           width: 7.3rem;
           min-width: 7.3rem;
