--- a/src/components/main/mainSection5/mainMarquee/mainMarquee.module.scss
+++ b/src/components/main/mainSection5/mainMarquee/mainMarquee.module.scss
@@ -9,6 +9,15 @@
   margin-top: 3rem;
 }
 
+@media (max-width: 1280px) {
+  .main-marquee {
+    width: 100%;
+    img {
+      width: 24rem;
+      margin: 0 1.2rem;
+    }
+  }
+}
 @media (max-width: 768px) {
   .main-marquee {
     width: 100%;
