--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -43,6 +43,10 @@ input[type="text"] {
     line-height: 2rem;
     letter-spacing: -0.044rem;
   }
+
+  &.alert::placeholder {
+    color: $color-orange;
+  }
 }
 
 select {
@@ -62,6 +66,10 @@ select {
   appearance: none;
   background: url("/assets/images/select_arrow.png") $color-white no-repeat 98% 50% / contain;
   background-size: 1.8rem 1.8rem;
+
+  &.alert {
+    color: $color-orange;
+  }
 }
 
 textarea {
@@ -88,6 +96,10 @@ textarea {
     font-weight: 400;
     line-height: 2rem;
     letter-spacing: -0.044rem;
+  }
+
+  &.alert::placeholder {
+    color: $color-orange;
   }
 }
 
@@ -138,6 +150,12 @@ input[type="checkbox"] + label span {
   line-height: 2.4rem;
   letter-spacing: -0.036rem;
   color: $color-black;
+}
+
+input[type="checkbox"] + label span.alert {
+  font-size: 1.3rem;
+  color: $color-orange;
+  margin-left: 0.6rem;
 }
 
 @media (max-width: 768px) {
@@ -202,5 +220,10 @@ input[type="checkbox"] + label span {
     font-size: 1.1rem;
     line-height: 1.8rem;
     letter-spacing: -0.036rem;
+  }
+  input[type="checkbox"] + label span.alert {
+    font-size: 0.9rem;
+    color: $color-orange;
+    margin-left: 0.6rem;
   }
 }
