--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,11 @@
 $background-color: #fff;
+$background-data-color: #f2f2f2;
 //컬러
 $color-white: #fff;
 $color-black: #333;
 $color-orange: #f66223;
 $color-yellow: #fddc37;
+$color-blue: #388bec;
 
 $color-bg-popup: #fff9db;
 
