--- a/src/components/popup/popupContactUs/popupContactUs.module.scss
+++ b/src/components/popup/popupContactUs/popupContactUs.module.scss
@@ -45,8 +45,15 @@
         }
       }
     }
+    .essential {
+      display: block;
+      text-align: right;
+      font-size: 1.2rem;
+      font-weight: 400;
+      margin-top: 0.9rem;
+    }
     form {
-      margin-top: 3.2rem;
+      margin-top: 1rem;
       input {
         display: block;
         width: 44rem;
@@ -153,8 +160,12 @@
           width: 6.5rem;
         }
       }
+      .essential {
+        font-size: 1rem;
+        margin-top: 0.6rem;
+      }
       form {
-        margin-top: 2rem;
+        margin-top: 0.6rem;
         input {
           width: 100%;
           min-width: 20rem;
