--- a/src/components/topHeader/topHeader.module.scss
+++ b/src/components/topHeader/topHeader.module.scss
@@ -33,6 +33,30 @@
   }
   .right {
     display: flex;
+    align-items: center;
     margin-left: auto;
+    .name {
+      font-size: 1.4rem;
+      font-weight: 300;
+      letter-spacing: -0.14px;
+      margin-right: 2.5rem;
+      strong {
+        font-weight: 500;
+      }
+    }
+    .help {
+      border: 0;
+      background-color: transparent;
+      &::before {
+        content: "";
+        width: 2.4rem;
+        height: 2.4rem;
+        background: url("/assets/images/ico_top_header_help.png") no-repeat 50% 50% / contain;
+      }
+    }
+    .logout {
+      border: 0;
+      background-color: transparent;
+    }
   }
 }
