--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,8 +10,8 @@ $color-blue: #388bec;
 $color-bg-popup: #fff9db;
 
 //최대크기
-$max-width: 144rem;
-$max-width-padding: 5rem;
+// $max-width: 144rem;
+// $max-width-padding: 5rem;
 
 //헤더 크기
-$header-height: 12rem;
+// $header-height: 12rem;
