--- a/src/components/main/mainBanner/mainBanner.module.scss
+++ b/src/components/main/mainBanner/mainBanner.module.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 43.8rem;
     max-width: var(--max-width);
-    padding: 0 var(--$max-width-padding);
+    padding: 0 var(--max-width-padding);
     margin: 0 auto;
 
     .text-wrap {
