--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,9 @@
   --max-width: 144rem;
   --max-width-padding: 8rem;
   --header-height: 9rem;
+
+  --data-content-min-width: 128rem;
+  --data-left-header-width: 24rem;
 }
 
 @media (max-width: 768px) {
