--- a/layouts/dataLayout/dataLayout.module.scss
+++ b/layouts/dataLayout/dataLayout.module.scss
@@ -4,11 +4,12 @@
   min-height: 100vh;
 
   .content-container {
-    position: fixed;
+    position: absolute;
     width: 100%;
     min-height: 100vh;
     padding-left: 24rem;
     background-color: $background-data-color;
+    min-width: var(--data-content-min-width);
     .content-wrap {
       margin-top: 8rem;
       padding: 2rem;
