--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -29,3 +29,15 @@
   border-radius: 3.8rem;
   background-color: $color-yellow;
 }
+
+@mixin data-popup-btn-submit {
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1.75;
+  letter-spacing: -0.016rem;
+  width: 7.5rem;
+  height: 3.8rem;
+  border-radius: 0.8rem;
+  background-color: $color-white;
+  border: 0.1rem solid $color-black;
+}
