feat: 테이블 추가, 필터기능 추가

--- a/src/components/data/popup/popupSearchBrand/popupSearchBrand.module.scss
+++ b/src/components/data/popup/popupSearchBrand/popupSearchBrand.module.scss
@@ -4,8 +4,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    button.submit {
-      @include data-popup-btn-submit;
+    button {
       margin-left: 1rem;
     }
   }
