--- a/src/components/data/button/btnExcelUpload/btnExcelUpload.module.scss
+++ b/src/components/data/button/btnExcelUpload/btnExcelUpload.module.scss
@@ -1,4 +1,7 @@
-button.btn-excel-upload {
+.btn-excel-upload-input {
+  display: none;
+}
+.btn-excel-upload {
   display: flex;
   align-items: center;
   font-size: 1.4rem;
@@ -6,6 +9,7 @@ button.btn-excel-upload {
   letter-spacing: -0.014rem;
   background-color: transparent;
   padding: 0;
+  cursor: pointer;
   &::before {
     content: "";
     display: inline-block;
