--- a/src/components/data/renderTable/renderTable.module.scss
+++ b/src/components/data/renderTable/renderTable.module.scss
@@ -30,10 +30,14 @@
 
         input {
           width: 100%;
+          height: 3.8rem;
+          border: 0.1rem solid #ebebeb;
         }
         select {
           width: 100%;
           border-radius: 0;
+          height: 3.8rem;
+          border: 0.1rem solid #ebebeb;
         }
       }
     }
