feat: 일매출 추가, 검색 수정 중, 달력 색상 변경

--- a/src/components/data/leftNavigation/leftNavigation.module.scss
+++ b/src/components/data/leftNavigation/leftNavigation.module.scss
@@ -113,6 +113,9 @@
               background: url("/assets/images/data/admin/ico_admin_nav_sales_off.png") no-repeat 50% 50% / contain;
             }
             &.menu5::before {
+              background: url("/assets/images/data/admin/ico_admin_nav_sales_off.png") no-repeat 50% 50% / contain;
+            }
+            &.menu6::before {
               background: url("/assets/images/data/admin/ico_admin_nav_customer_off.png") no-repeat 50% 50% / contain;
             }
           }
@@ -130,6 +133,9 @@
               background: url("/assets/images/data/admin/ico_admin_nav_sales_on.png") no-repeat 50% 50% / contain;
             }
             &.menu5::before {
+              background: url("/assets/images/data/admin/ico_admin_nav_sales_on.png") no-repeat 50% 50% / contain;
+            }
+            &.menu6::before {
               background: url("/assets/images/data/admin/ico_admin_nav_customer_on.png") no-repeat 50% 50% / contain;
             }
           }
