--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -166,7 +166,7 @@
 }
 
 .react-datepicker__day--selected {
-  background-color: #f66223 !important; /* 선택된 날짜 배경색 설정 (옵션) */
+  background-color: #333 !important; /* 선택된 날짜 배경색 설정 (옵션) */
   color: #fff !important; /* 선택된 날짜 텍스트색 설정 (옵션) */
 }
 
@@ -174,7 +174,6 @@
   border-width: 2px 2px 0 0 !important;
 }
 
-.react-datepicker__day--in-selecting-range,
-.react-datepicker__day--in-range {
+.react-datepicker__day--in-selecting-range {
   background-color: #f66223 !important;
 }
