--- a/pages/user/brand_backup/brand.module.scss
+++ b/pages/user/brand_backup/brand.module.scss
@@ -14,6 +14,7 @@
   }
   .content-btn-wrap {
     display: flex;
+    width: 100%;
     justify-content: flex-end;
     margin-bottom: 2rem;
     button + button {
