feat: user 브랜드, 일매출, 월매출 추가

--- a/src/components/data/leftNavigation/leftNavigation.module.scss
+++ b/src/components/data/leftNavigation/leftNavigation.module.scss
@@ -82,6 +82,9 @@
             &.menu3::before {
               background: url("/assets/images/data/user/ico_user_nav_sales_off.png") no-repeat 50% 50% / contain;
             }
+            &.menu4::before {
+              background: url("/assets/images/data/user/ico_user_nav_sales_off.png") no-repeat 50% 50% / contain;
+            }
           }
           button.active {
             &.menu1::before {
@@ -91,6 +94,9 @@
               background: url("/assets/images/data/user/ico_user_nav_franchisee_on.png") no-repeat 50% 50% / contain;
             }
             &.menu3::before {
+              background: url("/assets/images/data/user/ico_user_nav_sales_on.png") no-repeat 50% 50% / contain;
+            }
+            &.menu4::before {
               background: url("/assets/images/data/user/ico_user_nav_sales_on.png") no-repeat 50% 50% / contain;
             }
           }
