--- a/src/components/data/renderTable/renderTable.module.scss
+++ b/src/components/data/renderTable/renderTable.module.scss
@@ -50,6 +50,28 @@
           height: 3.8rem;
           border: 0.1rem solid #ebebeb;
         }
+        .button-wrap {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          text-align: center;
+          button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: transparent;
+            border: 0.1rem solid #888;
+            border-radius: 0.3rem;
+            color: #333;
+            font-size: 1.2rem;
+            padding: 0.2rem 0.6rem;
+          }
+
+          button + button {
+            margin-left: 0.5rem;
+          }
+        }
       }
     }
   }
