feat: table 컨텐츠 기본 사이즈 수정

--- a/pages/admin/company/company.module.scss
+++ b/pages/admin/company/company.module.scss
@@ -24,13 +24,8 @@
     }
   }
   .content-wrap {
-    min-height: 50rem;
-    .no-data {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    @include table-content-wrap;
+
     &.full-height {
       min-height: calc(100vh - 21.8rem);
     }
