--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -28,3 +28,29 @@
     }
   }
 }
+
+@mixin table-content-wrap {
+  height: 100%;
+  min-height: 50rem;
+  .item {
+    height: 100%;
+    .loading-data {
+      width: 100%;
+      height: 100%;
+      min-height: 50rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.5rem;
+    }
+    .no-data {
+      width: 100%;
+      height: 100%;
+      min-height: 50rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.5rem;
+    }
+  }
+}
