feat: 메뉴 category 서버사이드로 변경

--- a/src/components/data/leftNavigation/leftNavigation.module.scss
+++ b/src/components/data/leftNavigation/leftNavigation.module.scss
@@ -27,6 +27,7 @@
           align-items: center;
           height: 6.4rem;
           button {
+            width: 100%;
             display: flex;
             align-items: center;
             font-size: 1.8rem;
@@ -73,6 +74,7 @@
       ul.user {
         li {
           button {
+            width: 100%;
             &.menu1::before {
               background: url("/assets/images/data/user/ico_user_nav_brand_off.png") no-repeat 50% 50% / contain;
             }
