feat: newRow 자동 추가로 변경

--- a/src/components/data/renderTable/renderTable.module.scss
+++ b/src/components/data/renderTable/renderTable.module.scss
@@ -2,10 +2,10 @@
   overflow-x: auto;
   padding-bottom: 2rem;
   &::-webkit-scrollbar {
-    height: 0.4rem;
+    height: 0.6rem;
   }
   &::-webkit-scrollbar-thumb {
-    border-radius: 2px;
+    border-radius: 0.6rem;
     background: #bebebe;
   }
 
