feat: 테이블 컬럼 타입 추가

--- a/src/components/data/renderTable/renderTable.module.scss
+++ b/src/components/data/renderTable/renderTable.module.scss
@@ -40,7 +40,7 @@
         line-height: 1.2;
         letter-spacing: -0.014rem;
         border-bottom: 0.1rem solid #eeeeee;
-        padding: 0 1rem;
+        padding: 1rem 1rem;
 
         input {
           width: 100%;
