feat: 맵핑관리 화면추가, 엑셀 업로드 컬럼 수정

--- a/src/components/data/searchItem/searchItem.module.scss
+++ b/src/components/data/searchItem/searchItem.module.scss
@@ -2,25 +2,12 @@
   display: flex;
   align-items: center;
   label {
-    font-size: 1.6rem;
-    font-weight: 700;
-    line-height: 1.5rem;
-    letter-spacing: -0.016rem;
-    margin-right: 1.5rem;
+    @include label;
   }
   select {
-    display: inline-block;
-    width: auto;
-    width: 11rem;
-    border: 0.1rem solid #c2c2c2;
-    background-color: #fbfbfb;
-    background-position: calc(100% - 0.5rem) 50%;
+    @include select;
   }
   input {
-    display: inline-block;
-    width: auto;
-    width: 11rem;
-    border: 0.1rem solid #c2c2c2;
-    background-color: #fbfbfb;
+    @include input;
   }
 }
