--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -54,3 +54,54 @@
     }
   }
 }
+
+@mixin label {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+  letter-spacing: -0.016rem;
+  margin-right: 1.5rem;
+}
+
+@mixin select {
+  display: inline-block;
+  width: auto;
+  width: 11rem;
+  min-height: 3.8rem;
+  border: 0.1rem solid #c2c2c2;
+  background-color: #fbfbfb;
+  background-position: calc(100% - 0.5rem) 50%;
+  border-radius: 0.8rem;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2rem;
+  letter-spacing: -0.044rem;
+  padding: 0 1.2rem;
+}
+
+@mixin input {
+  display: inline-block;
+  width: auto;
+  width: 11rem;
+  min-height: 3.8rem;
+  border: 0.1rem solid #c2c2c2;
+  background-color: #fbfbfb;
+  border-radius: 0.8rem;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2rem;
+  letter-spacing: -0.044rem;
+  padding: 0 1.2rem;
+}
+
+@mixin default-button {
+  min-height: 3.8rem;
+  padding: 0 2rem;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 2.8rem;
+  letter-spacing: -0.016rem;
+  border-radius: 8px;
+  border: 1px solid $color-black;
+  background-color: $color-white;
+}
