feat: 가맹점관리 수정 추가 api 연결, 검색 후 첫페이지로 이동

--- a/src/components/data/renderTable/renderTable.module.scss
+++ b/src/components/data/renderTable/renderTable.module.scss
@@ -46,6 +46,9 @@
           width: 100%;
           height: 3.8rem;
           border: 0.1rem solid #ebebeb;
+          &:read-only {
+            background-color: #eeeeee;
+          }
         }
         select {
           width: 100%;
@@ -108,7 +111,7 @@
     }
 
     button.number {
-      width: 2.4rem;
+      min-width: 2.4rem;
       height: 2.4rem;
       border-radius: 2.4rem;
       margin: 0 0.5rem;
